report2/src/parser.automaton
State 0:
toplevel' -> . toplevel [ # ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 38
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On toplevel shift to state 43
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 44
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 1:
AExpr -> TRUE . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On THEN reduce production AExpr -> TRUE 
-- On SEMISEMI reduce production AExpr -> TRUE 
-- On RPAREN reduce production AExpr -> TRUE 
-- On PLUS reduce production AExpr -> TRUE 
-- On MULT reduce production AExpr -> TRUE 
-- On LT reduce production AExpr -> TRUE 
-- On IN reduce production AExpr -> TRUE 
-- On ELSE reduce production AExpr -> TRUE 
-- On DISJ reduce production AExpr -> TRUE 
-- On CONJ reduce production AExpr -> TRUE 

State 2:
AExpr -> LPAREN . Expr RPAREN [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 36
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 3:
LetExpr -> LET . ID EQ Expr IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On ID shift to state 4

State 4:
LetExpr -> LET ID . EQ Expr IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On EQ shift to state 5

State 5:
LetExpr -> LET ID EQ . Expr IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 33
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 6:
AExpr -> INTV . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On THEN reduce production AExpr -> INTV 
-- On SEMISEMI reduce production AExpr -> INTV 
-- On RPAREN reduce production AExpr -> INTV 
-- On PLUS reduce production AExpr -> INTV 
-- On MULT reduce production AExpr -> INTV 
-- On LT reduce production AExpr -> INTV 
-- On IN reduce production AExpr -> INTV 
-- On ELSE reduce production AExpr -> INTV 
-- On DISJ reduce production AExpr -> INTV 
-- On CONJ reduce production AExpr -> INTV 

State 7:
IfExpr -> IF . Expr THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 22
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 8:
AExpr -> ID . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On IN reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 
-- On DISJ reduce production AExpr -> ID 
-- On CONJ reduce production AExpr -> ID 

State 9:
AExpr -> FALSE . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On THEN reduce production AExpr -> FALSE 
-- On SEMISEMI reduce production AExpr -> FALSE 
-- On RPAREN reduce production AExpr -> FALSE 
-- On PLUS reduce production AExpr -> FALSE 
-- On MULT reduce production AExpr -> FALSE 
-- On LT reduce production AExpr -> FALSE 
-- On IN reduce production AExpr -> FALSE 
-- On ELSE reduce production AExpr -> FALSE 
-- On DISJ reduce production AExpr -> FALSE 
-- On CONJ reduce production AExpr -> FALSE 

State 10:
LTExpr -> PExpr . LT PExpr [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
LTExpr -> PExpr . [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS LT IN ELSE DISJ CONJ ]
-- On PLUS shift to state 11
-- On LT shift to state 16
-- On THEN reduce production LTExpr -> PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr 
-- On RPAREN reduce production LTExpr -> PExpr 
-- On IN reduce production LTExpr -> PExpr 
-- On ELSE reduce production LTExpr -> PExpr 
-- On DISJ reduce production LTExpr -> PExpr 
-- On CONJ reduce production LTExpr -> PExpr 

State 11:
PExpr -> PExpr PLUS . MExpr [ THEN SEMISEMI RPAREN PLUS LT IN ELSE DISJ CONJ ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On MExpr shift to state 12
-- On AExpr shift to state 15

State 12:
MExpr -> MExpr . MULT AExpr [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
PExpr -> PExpr PLUS MExpr . [ THEN SEMISEMI RPAREN PLUS LT IN ELSE DISJ CONJ ]
-- On MULT shift to state 13
-- On THEN reduce production PExpr -> PExpr PLUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr PLUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr PLUS MExpr 
-- On PLUS reduce production PExpr -> PExpr PLUS MExpr 
-- On LT reduce production PExpr -> PExpr PLUS MExpr 
-- On IN reduce production PExpr -> PExpr PLUS MExpr 
-- On ELSE reduce production PExpr -> PExpr PLUS MExpr 
-- On DISJ reduce production PExpr -> PExpr PLUS MExpr 
-- On CONJ reduce production PExpr -> PExpr PLUS MExpr 

State 13:
MExpr -> MExpr MULT . AExpr [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On AExpr shift to state 14

State 14:
MExpr -> MExpr MULT AExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On THEN reduce production MExpr -> MExpr MULT AExpr 
-- On SEMISEMI reduce production MExpr -> MExpr MULT AExpr 
-- On RPAREN reduce production MExpr -> MExpr MULT AExpr 
-- On PLUS reduce production MExpr -> MExpr MULT AExpr 
-- On MULT reduce production MExpr -> MExpr MULT AExpr 
-- On LT reduce production MExpr -> MExpr MULT AExpr 
-- On IN reduce production MExpr -> MExpr MULT AExpr 
-- On ELSE reduce production MExpr -> MExpr MULT AExpr 
-- On DISJ reduce production MExpr -> MExpr MULT AExpr 
-- On CONJ reduce production MExpr -> MExpr MULT AExpr 

State 15:
MExpr -> AExpr . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On THEN reduce production MExpr -> AExpr 
-- On SEMISEMI reduce production MExpr -> AExpr 
-- On RPAREN reduce production MExpr -> AExpr 
-- On PLUS reduce production MExpr -> AExpr 
-- On MULT reduce production MExpr -> AExpr 
-- On LT reduce production MExpr -> AExpr 
-- On IN reduce production MExpr -> AExpr 
-- On ELSE reduce production MExpr -> AExpr 
-- On DISJ reduce production MExpr -> AExpr 
-- On CONJ reduce production MExpr -> AExpr 

State 16:
LTExpr -> PExpr LT . PExpr [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 17
-- On MExpr shift to state 18
-- On AExpr shift to state 15

State 17:
LTExpr -> PExpr LT PExpr . [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
PExpr -> PExpr . PLUS MExpr [ THEN SEMISEMI RPAREN PLUS IN ELSE DISJ CONJ ]
-- On PLUS shift to state 11
-- On THEN reduce production LTExpr -> PExpr LT PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr LT PExpr 
-- On RPAREN reduce production LTExpr -> PExpr LT PExpr 
-- On IN reduce production LTExpr -> PExpr LT PExpr 
-- On ELSE reduce production LTExpr -> PExpr LT PExpr 
-- On DISJ reduce production LTExpr -> PExpr LT PExpr 
-- On CONJ reduce production LTExpr -> PExpr LT PExpr 

State 18:
MExpr -> MExpr . MULT AExpr [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
PExpr -> MExpr . [ THEN SEMISEMI RPAREN PLUS LT IN ELSE DISJ CONJ ]
-- On MULT shift to state 13
-- On THEN reduce production PExpr -> MExpr 
-- On SEMISEMI reduce production PExpr -> MExpr 
-- On RPAREN reduce production PExpr -> MExpr 
-- On PLUS reduce production PExpr -> MExpr 
-- On LT reduce production PExpr -> MExpr 
-- On IN reduce production PExpr -> MExpr 
-- On ELSE reduce production PExpr -> MExpr 
-- On DISJ reduce production PExpr -> MExpr 
-- On CONJ reduce production PExpr -> MExpr 

State 19:
Expr -> LetExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production Expr -> LetExpr 
-- On SEMISEMI reduce production Expr -> LetExpr 
-- On RPAREN reduce production Expr -> LetExpr 
-- On IN reduce production Expr -> LetExpr 
-- On ELSE reduce production Expr -> LetExpr 

State 20:
CJExpr -> LTExpr . [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
-- On THEN reduce production CJExpr -> LTExpr 
-- On SEMISEMI reduce production CJExpr -> LTExpr 
-- On RPAREN reduce production CJExpr -> LTExpr 
-- On IN reduce production CJExpr -> LTExpr 
-- On ELSE reduce production CJExpr -> LTExpr 
-- On DISJ reduce production CJExpr -> LTExpr 
-- On CONJ reduce production CJExpr -> LTExpr 

State 21:
Expr -> IfExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production Expr -> IfExpr 
-- On SEMISEMI reduce production Expr -> IfExpr 
-- On RPAREN reduce production Expr -> IfExpr 
-- On IN reduce production Expr -> IfExpr 
-- On ELSE reduce production Expr -> IfExpr 

State 22:
IfExpr -> IF Expr . THEN Expr ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN shift to state 23

State 23:
IfExpr -> IF Expr THEN . Expr ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 24
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 24:
IfExpr -> IF Expr THEN Expr . ELSE Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On ELSE shift to state 25

State 25:
IfExpr -> IF Expr THEN Expr ELSE . Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 26
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 26:
IfExpr -> IF Expr THEN Expr ELSE Expr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On SEMISEMI reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On RPAREN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On IN reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 
-- On ELSE reduce production IfExpr -> IF Expr THEN Expr ELSE Expr 

State 27:
DJExpr -> DJExpr . DISJ CJExpr [ THEN SEMISEMI RPAREN IN ELSE DISJ ]
Expr -> DJExpr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On DISJ shift to state 28
-- On THEN reduce production Expr -> DJExpr 
-- On SEMISEMI reduce production Expr -> DJExpr 
-- On RPAREN reduce production Expr -> DJExpr 
-- On IN reduce production Expr -> DJExpr 
-- On ELSE reduce production Expr -> DJExpr 

State 28:
DJExpr -> DJExpr DISJ . CJExpr [ THEN SEMISEMI RPAREN IN ELSE DISJ ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LTExpr shift to state 20
-- On CJExpr shift to state 29
-- On AExpr shift to state 15

State 29:
CJExpr -> CJExpr . CONJ LTExpr [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
DJExpr -> DJExpr DISJ CJExpr . [ THEN SEMISEMI RPAREN IN ELSE DISJ ]
-- On CONJ shift to state 30
-- On THEN reduce production DJExpr -> DJExpr DISJ CJExpr 
-- On SEMISEMI reduce production DJExpr -> DJExpr DISJ CJExpr 
-- On RPAREN reduce production DJExpr -> DJExpr DISJ CJExpr 
-- On IN reduce production DJExpr -> DJExpr DISJ CJExpr 
-- On ELSE reduce production DJExpr -> DJExpr DISJ CJExpr 
-- On DISJ reduce production DJExpr -> DJExpr DISJ CJExpr 

State 30:
CJExpr -> CJExpr CONJ . LTExpr [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On INTV shift to state 6
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LTExpr shift to state 31
-- On AExpr shift to state 15

State 31:
CJExpr -> CJExpr CONJ LTExpr . [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
-- On THEN reduce production CJExpr -> CJExpr CONJ LTExpr 
-- On SEMISEMI reduce production CJExpr -> CJExpr CONJ LTExpr 
-- On RPAREN reduce production CJExpr -> CJExpr CONJ LTExpr 
-- On IN reduce production CJExpr -> CJExpr CONJ LTExpr 
-- On ELSE reduce production CJExpr -> CJExpr CONJ LTExpr 
-- On DISJ reduce production CJExpr -> CJExpr CONJ LTExpr 
-- On CONJ reduce production CJExpr -> CJExpr CONJ LTExpr 

State 32:
CJExpr -> CJExpr . CONJ LTExpr [ THEN SEMISEMI RPAREN IN ELSE DISJ CONJ ]
DJExpr -> CJExpr . [ THEN SEMISEMI RPAREN IN ELSE DISJ ]
-- On CONJ shift to state 30
-- On THEN reduce production DJExpr -> CJExpr 
-- On SEMISEMI reduce production DJExpr -> CJExpr 
-- On RPAREN reduce production DJExpr -> CJExpr 
-- On IN reduce production DJExpr -> CJExpr 
-- On ELSE reduce production DJExpr -> CJExpr 
-- On DISJ reduce production DJExpr -> CJExpr 

State 33:
LetExpr -> LET ID EQ Expr . IN Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On IN shift to state 34

State 34:
LetExpr -> LET ID EQ Expr IN . Expr [ THEN SEMISEMI RPAREN IN ELSE ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 35
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 35:
LetExpr -> LET ID EQ Expr IN Expr . [ THEN SEMISEMI RPAREN IN ELSE ]
-- On THEN reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On SEMISEMI reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On RPAREN reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On IN reduce production LetExpr -> LET ID EQ Expr IN Expr 
-- On ELSE reduce production LetExpr -> LET ID EQ Expr IN Expr 

State 36:
AExpr -> LPAREN Expr . RPAREN [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On RPAREN shift to state 37

State 37:
AExpr -> LPAREN Expr RPAREN . [ THEN SEMISEMI RPAREN PLUS MULT LT IN ELSE DISJ CONJ ]
-- On THEN reduce production AExpr -> LPAREN Expr RPAREN 
-- On SEMISEMI reduce production AExpr -> LPAREN Expr RPAREN 
-- On RPAREN reduce production AExpr -> LPAREN Expr RPAREN 
-- On PLUS reduce production AExpr -> LPAREN Expr RPAREN 
-- On MULT reduce production AExpr -> LPAREN Expr RPAREN 
-- On LT reduce production AExpr -> LPAREN Expr RPAREN 
-- On IN reduce production AExpr -> LPAREN Expr RPAREN 
-- On ELSE reduce production AExpr -> LPAREN Expr RPAREN 
-- On DISJ reduce production AExpr -> LPAREN Expr RPAREN 
-- On CONJ reduce production AExpr -> LPAREN Expr RPAREN 

State 38:
LetExpr -> LET . ID EQ Expr IN Expr [ SEMISEMI ]
toplevel -> LET . ID EQ Expr SEMISEMI [ # ]
-- On ID shift to state 39

State 39:
LetExpr -> LET ID . EQ Expr IN Expr [ SEMISEMI ]
toplevel -> LET ID . EQ Expr SEMISEMI [ # ]
-- On EQ shift to state 40

State 40:
LetExpr -> LET ID EQ . Expr IN Expr [ SEMISEMI ]
toplevel -> LET ID EQ . Expr SEMISEMI [ # ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 2
-- On LET shift to state 3
-- On INTV shift to state 6
-- On IF shift to state 7
-- On ID shift to state 8
-- On FALSE shift to state 9
-- On PExpr shift to state 10
-- On MExpr shift to state 18
-- On LetExpr shift to state 19
-- On LTExpr shift to state 20
-- On IfExpr shift to state 21
-- On Expr shift to state 41
-- On DJExpr shift to state 27
-- On CJExpr shift to state 32
-- On AExpr shift to state 15

State 41:
LetExpr -> LET ID EQ Expr . IN Expr [ SEMISEMI ]
toplevel -> LET ID EQ Expr . SEMISEMI [ # ]
-- On SEMISEMI shift to state 42
-- On IN shift to state 34

State 42:
toplevel -> LET ID EQ Expr SEMISEMI . [ # ]
-- On # reduce production toplevel -> LET ID EQ Expr SEMISEMI 

State 43:
toplevel' -> toplevel . [ # ]
-- On # accept toplevel

State 44:
toplevel -> Expr . SEMISEMI [ # ]
-- On SEMISEMI shift to state 45

State 45:
toplevel -> Expr SEMISEMI . [ # ]
-- On # reduce production toplevel -> Expr SEMISEMI 

